@@ -17,4 +17,8 @@
 ========== V 0.1- 16/11 ==========
 -Mise en forme du rapport
 -Introduction
+
+
+========== V 0.2- 22/11 ==========
+- Utilisation getOpt
 _________________________________________________________________________________
